# smartKT

./: .gitignore  .gitmodules  PROJDESC.md  README.md  echo.py  examine.py  initialize.py  merge  old_examine.py  pin.sh  requirements.txt  runs.json  sample_runs.json
PIN/: .gitignore
PIN/Work/: .gitignore  makefile  makefile.rules  memtracker.cpp  memtracker.h  pass2.py  saved_memtracker.cpp  tester.cpp
outputs/: .gitignore
outputs/constructor_assign/: dependencies.p  make_log.txt
outputs/constructor_basic/: dependencies.p  make_log.txt
outputs/constructor_copy/: dependencies.p  make_log.txt
outputs/dynamic_binding/: dependencies.p  make_log.txt
outputs/engine/: make_log.txt
outputs/inherit/: compile_commands.json  dependencies.p  make_log.txt
outputs/macros/: compile_commands.json  dependencies.p  make_log.txt
outputs/namespace/: compile_commands.json  dependencies.p  make_log.txt
outputs/opr_overload/: dependencies.p  make_log.txt
outputs/paraview/: make_log.txt
outputs/pointers/: dependencies.p  make_log.txt
outputs/simple/: compile_commands.json  dependencies.p  make_log.txt
outputs/smallproj/: compile_commands.json  dependencies.p  make_log.txt
outputs/temptest/: compile_commands.json  dependencies.p  make_log.txt
outputs/threads/: compile_commands.json  dependencies.p  final_comments.xml  make_log.txt
parsers/: .gitignore  Makefile  ast2xml  ast2xml.cc  ast_parser  ast_parser.cc  calls  calls.cc  clang_parser.py  combine.py  ddx.py  deflocation.py  dwarfdump_parser_deprecated.py  dwxml.py  funcs  funcs.py  functions.cc  imp_ddx.py  old_project_parser.py  preprocessor_extractor.py  project_parser.py  saved_ddx.py  spandan_ast2xml.cc  uniquify.py  vcs.py  xml2ttl.py
parsers/cfg/: Makefile  README.md
parsers/comments/: GenerateCommentsXMLForAFile.py  GenerateCommentsXMLForAFolder.py  GetFinalXMLForComments.py  MergeAllCommentsXML.py  XML_CommentExtractor.py  XML_FinalExcelGeneration_with_id.py  XML_ScopeModule.py  xmlparser_with_id.py
projects/: .gitignore
projects/SimplComprTest/: CMakeLists.txt  runs_SimplComprTest.json
projects/SimplComprTest/lib/: foo.cpp  foo.h
projects/SimplComprTest/src/: helper.cpp  main.cpp
projects/mrfs/: CMakeLists.txt  filesys.cpp  filesys.h  fs.cpp  in.cpp  main.cpp  makefile  runs_mrfs.json  sb.cpp  structures.h  test1.cpp  test2.cpp  test3.cpp
projects/mrfs/test/: test1.txt
projects/smallproj/: CMakeLists.txt  README.md  init.sh
projects/smallproj/lib/: CMakeLists.txt  bar.cpp  bar.h  foo.cpp  foo.h
projects/smallproj/src/: extern.cpp  threading.cpp
runs/: runs_SFML.json  runs_curl.json  runs_gromacs.json  runs_inherit.json  runs_mrfs.json  runs_pngtest.json  runs_sf.json  runs_simple.json  runs_threads.json
testsuite/: .gitignore
testsuite/constructor_assign/: CMakeCache.txt  CMakeLists.txt  Makefile  assign.cpp  cmake_install.cmake  compile_commands.json  make_log.txt  runs_ctor_assgn.json
testsuite/constructor_basic/: CMakeLists.txt  basic.cpp  runs_ctor_basic.json
testsuite/constructor_copy/: CMakeLists.txt  copy.cpp  runs_ctor_copy.json
testsuite/defines/: CMakeLists.txt  base.cc  foo.cc  foo.hh
testsuite/dynamic_binding/: CMakeLists.txt  dynamic.cpp  runs_dyn_bind.json
testsuite/inherit/: CMakeLists.txt
testsuite/inherit/lib/: foo.cpp  foo.h
testsuite/inherit/src/: inherit.cpp
testsuite/libfunc/: CMakeLists.txt  foo.cc
testsuite/libfuncresolve/: CMakeLists.txt  bar.cc  base.cc  foo.cc  rand.cc
testsuite/macros/: CMakeLists.txt  base.c  foo.c  foo.h
testsuite/namespace/: CMakeLists.txt  random.hh
testsuite/opr_overload/: CMakeLists.txt  overload.cpp  runs_overload.json
testsuite/simple/: CMakeLists.txt  bar.cc  base.cc  foo.cc  foo.hh  init.sh  main.cc  rand.cc  random.cc
testsuite/smallproj/: CMakeLists.txt  foo.cpp  foo.h  foo.hpp  fooC.c  init.sh  main.cpp  mainC.c  runs_smallproj.json
testsuite/smallproj/lib/: bar.cpp  foo.h  mythread.h  tem.h
testsuite/smallproj/src/: builder_pattern_1.cpp  prog.cpp  template.cpp
testsuite/temptest/: CMakeLists.txt  driver.cc  init.sh  runs_temptest.json  template_test.cc
testsuite/temptest/foo/: CMakeLists.txt  foo.cc  foo.hh  wh.cc
website/: README.md  app.py  initialize.py  mapper.py  query_run.py  web_config.json
(+440 files in other folders)
